# rustc-issue-repro

./: Cargo.toml
src/: audio.rs  batch.rs  main.rs  resources.rs
src/game_scene/: camera.rs  map.rs  mod.rs  models.rs  scene.rs  view.rs
src/game_scene/ui/: mod.rs
src/scenes/: mod.rs
src/state/: map_loader.rs  mod.rs  rules.rs  state.rs
