[package]
name = "test"
version = "0.1.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]

[profile.dev]
opt-level = 2
codegen-units = 2

[dependencies]
cgmath = "0.3.0"
glium = "0.10.0"
image = "0.3.9"
rand = "0.3.0"
rustc-serialize = "0.3.0"
text-render-atlas = { git = "https://github.com/tomaka/text-render-atlas" }
time = "0.1"
